Add new commands to help
+ fix localization strings
+ use setMyCommands

--- a/src/help/en.html
+++ b/src/help/en.html
@@ -7,8 +7,10 @@ or a textual description: <code>White House Washington DC</code>.
 The same is available via inline queries: <code>@{{bot_name}} Statue of Liberty</code>
 
 These commands are supported:
-/help — print a help message
+/help — print a help message.
 /loc — use this command to search for a place in a group chat since the bot has no access to usual messages.
+<code>/setlang ru</code> — change the language.
+/setloc — clarify your location to make search results more relevant.
 
 This bot uses information from the following data sources:
 — <a href="https://nominatim.openstreetmap.org/">OpenStreetMap Nominatim</a>
