--- a/src/help/ru.html
+++ b/src/help/ru.html
@@ -7,8 +7,10 @@
 То же самое доступно и через встроенные запросы: <code>@{{bot_name}} Эрмитаж</code>
 
 Бот поддерживает следующие команды:
-/help — напечатает это сообщение снова;
+/help — напечатает это сообщение снова.
 /loc — используй эту команду для поиска мест в групповых чатах, так как там бот не имеет доступа к обычным сообщениям.
+<code>/setlang en</code> — сменить язык.
+/setloc — уточни своё местоположение, чтобы результаты поиска стали более релевантными.
 
 Для работы используются данные из следующих источников:
 — <a href="https://nominatim.openstreetmap.org/">OpenStreetMap Nominatim</a>
